--- a/public/scss/estilos.scss
+++ b/public/scss/estilos.scss
@@ -16,7 +16,7 @@
   }
  
  .like-btn{
-    background: url('../images/heart.png') no-repeat 0% 50%;
+    background: url('../images/heart.png') no-repeat 3.5% 50%;
     background-size: 2900%;
   }
   
@@ -514,30 +514,30 @@ div.more-options:before {
 
 
 
-.top-site-outer {
+.xtop-site-outer {
     padding: 0 16px;
     display: inline-block; 
 }
 
-.top-site-outer .top-site-inner {
+.xtop-site-outer .top-site-inner {
     position: relative; 
 }
 
-.top-site-outer .top-site-inner > a {
+.xtop-site-outer .top-site-inner > a {
     color: inherit;
     display: block;
     outline: none; 
 }
    
   
-.top-site-outer .tile {
+.xtop-site-outer .tile {
       cursor: pointer;
-      height: 96px;
+    //  height: 96px;
       position: relative;
-      width: 96px;
+     // width: 96px;
  }
       
-.top-site-outer .screenshot {
+.xtop-site-outer .screenshot {
       background-position: top left;
       background-size: cover;
       height: 100%;
@@ -549,7 +549,7 @@ div.more-options:before {
 }
   
     
-.top-site-outer .title {
+.xtop-site-outer .title {
       background-color: White;
       color: red;
       font: message-box;
@@ -565,6 +565,13 @@ div.more-options:before {
         top: 0 ;
         left: 100%;
         transform: translate(-50%, -50%);       
+}
+
+.btn-detalle{
+    position: absolute;
+    top:100% ;
+    left: 100%;
+    transform: translate(-50%, -50%);       
 }
 
 //+++++++++++++++++++++++++++
@@ -618,8 +625,8 @@ div.more-options:before {
 }
 
 .favorite{
-    left: 85%;
-    top: 40%;
+    left: 75%;
+    top: 10%;
 }
 .favorite:hover{
     color: $color-secundario;
